# betula

./: .gitignore  CHANGELOG.md  CITATION.cff  Cargo.toml  LICENSE-MIT  README.md  pyproject.toml
.github/workflows/: build.yml
benches/: baseline_bench.rs  cf_tree_insert.rs  cluster_feature.rs  distance.rs
betulars/: __init__.py  _betulars.pyi
scripts/: verify_comparison.py  verify_python_binding.py
src/: betula.rs  lib.rs  types.rs  utils.rs
src/cf_tree/: insert.rs  mod.rs  rebuild.rs  regression.rs  split.rs
src/cluster_feature/: mod.rs  vii.rs  vvi.rs  vvv.rs
src/distance/: centroid.rs  intercluster.rs  mod.rs  radius.rs  regression.rs  variance.rs  vector_distance.rs
src/python/: betula.rs  cf_tree.rs  cluster_feature.rs  mod.rs  types.rs
