[package]
name = "betula"
description = "Rust Implementation of BETULA, an improved version of the BIRCH algorithm. Fast and streamable data aggregation."
version = "0.1.0"
edition = "2024"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/andiwg/betula"
categories = ["algorithms", "data-structures", "science"]
keywords = ["clustering", "birch", "cf-tree", "streaming", "machine-learning"]
exclude = [
    ".cargo/",
    "__pycache__/",
    "betulars/",
    "data/",
    "misc/",
    "target/",
    ".venv/",
    "*.npy",
    "*.so",
    "*.pyi",
    "pyproject.toml",
    "scripts/",
    "CITATION.cff",
]

[lib]
name = "betula"
path = "src/lib.rs"
test = true
doc = true
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "betula"
path = "src/bin/betula.rs"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"
required-features = ["bench"]

[dependencies]
num = "0.4"
num-traits = "0.2"
ndarray = "0.17"
rand = "0.9.2"
npyz = "0.8"
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py39"], optional = true }
numpy = { version = "0.28", optional = true }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "cf_tree_insert"
harness = false

[[bench]]
name = "distance"
harness = false

[[bench]]
name = "cluster_feature"
harness = false

[[bench]]
name = "baseline_bench"
harness = false

[features]
default = []
bench = []
python = ["pyo3", "numpy"]

[profile.profiling]
inherits = "release"
opt-level = 3
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
